postDetail구현 완로 createpost구현 완료

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,7 @@
         </activity>
         <activity android:name=".LoginActivity" />
         <activity android:name=".PostListActivity" />
+        <activity android:name=".PostDetailActivity" />
     </application>
 
 </manifest>
