--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,7 @@
         <activity android:name=".PostListActivity" />
         <activity android:name=".PostDetailActivity" />
         <activity android:name=".CreatePostActivity" />
+        <activity android:name=".RegisterActivity" />
     </application>
 
 </manifest>
